even more enable variables

--- a/scss/_settings_options.scss
+++ b/scss/_settings_options.scss
@@ -1,12 +1,15 @@
 // Utility options
+$enable-utility-bg:                         true !default;  // true
 $enable-utility-bg-colors:                  true !default;  // true
 $enable-utility-bg-palette:                 true !default;  // true
 $enable-utility-bg-special:                 true !default;  // true
 
+$enable-utility-radius:                     true !default;  // true
 $enable-utility-radius-circle:              true !default;  // true
 $enable-utility-radius-addition:            true !default;  // true
 $enable-utility-radius-removal:             true !default;  // true
 
+$enable-utility-border:                     true !default;  // true
 $enable-utility-border-addition:            true !default;  // true
 $enable-utility-border-removal:             true !default;  // true
 $enable-utility-border-colors:              true !default;  // true
@@ -15,14 +18,17 @@ $enable-utility-border-special:             true !default;  // true
 
 $enable-utility-clearfix:                   true !default;  // true
 
+$enable-utility-display:                    true !default;  // true
 $enable-utility-display-common:             true !default;  // true
 $enable-utility-display-table:              true !default;  // true
 $enable-utility-display-down:               true !default;  // true
 $enable-utility-display-print:              true !default;  // true
 
+$enable-utility-embed:                      true !default;  // true
 $enable-utility-embed-fluid:                true !default;  // true
 $enable-utility-embed-fullscreen:           true !default;  // true
 
+$enable-utility-flex:                       true !default;  // true
 $enable-utility-flex-order:                 true !default;  // true
 $enable-utility-flex-direction:             true !default;  // true
 $enable-utility-flex-wrap:                  true !default;  // true
@@ -34,6 +40,7 @@ $enable-utility-flex-sizing:                true !default;  // true
 
 $enable-utility-float:                      true !default;  // true
 
+$enable-utility-position:                   true !default;  // true
 $enable-utility-position-common:            true !default;  // true
 $enable-utility-position-fixed:             true !default;  // true
 $enable-utility-position-fixed-top:         true !default;  // true
@@ -41,6 +48,7 @@ $enable-utility-position-fixed-bottom:      true !default;  // true
 $enable-utility-position-sticky:            true !default;  // true
 $enable-utility-position-sticky-top:        true !default;  // true
 
+$enable-utility-sronly:                     true !default;  // true
 $enable-utility-sronly-common:              true !default;  // true
 $enable-utility-sronly-focusable:           true !default;  // true
 $enable-utility-sronly-responsive:          true !default;  // true
@@ -48,17 +56,29 @@ $enable-utility-sronly-responsive-down:     true !default;  // true
 
 $enable-utility-shadow:                     true !default;  // true
 
+$enable-utility-sizing:                     true !default;  // true
 $enable-utility-sizing-width:               true !default;  // true
 $enable-utility-sizing-height:              true !default;  // true
 
+$enable-utility-spacing:                    true !default;  // true
 $enable-utility-spacing-padding:            true !default;  // true
 $enable-utility-spacing-margin:             true !default;  // true
 $enable-utility-spacing-margin-auto:        true !default;  // true
 $enable-utility-spacing-margin-negative:    true !default;  // true
 
+$enable-utility-text:                       true !default;  // true
+$enable-utility-text-justify:               true !default;  // true
+$enable-utility-text-nowrap:                true !default;  // true
+$enable-utility-text-align:                 true !default;  // true
+$enable-utility-text-transform:             true !default;  // true
+$enable-utility-text-weight:                true !default;  // true
+$enable-utility-text-style:                 true !default;  // true
+$enable-utility-text-family:                true !default;  // true
+$enable-utility-text-truncate:              true !default;  // true
+$enable-utility-text-colors:                true !default;  // true
 $enable-utility-text-palette:               true !default;  // true
 $enable-utility-text-special:               true !default;  // true
 
-$enable-utility-utility-valign:             true !default;  // true
+$enable-utility-valign:                     true !default;  // true
 
-$enable-utility-utility-visibility:         true !default;  // true
+$enable-utility-visibility:                 true !default;  // true
