--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -1,52 +1,54 @@
 // stylelint-disable declaration-no-important
 
-// Common positioning
-@each $breakpoint in $utility-position-breakpoints {
-    $bprule: breakpoint-designator($breakpoint);
+@if $enable-utility-position {
+    // Common positioning
+    @each $breakpoint in $utility-position-breakpoints {
+        $bprule: breakpoint-designator($breakpoint);
 
-    @include media-breakpoint-up($breakpoint) {
-        @if $enable-utility-position-common {
-            .position#{$bprule}-static   { position: static !important; }
-            .position#{$bprule}-relative { position: relative !important; }
-            .position#{$bprule}-absolute { position: absolute !important; }
-        }
-        @if $enable-utility-position-fixed {
-            .position#{$bprule}-fixed    { position: fixed !important; }
-        }
-        @if $enable-utility-position-sticky {
-            @supports (position: sticky) {
-                .position#{$bprule}-sticky   { position: sticky !important; }
+        @include media-breakpoint-up($breakpoint) {
+            @if $enable-utility-position-common {
+                .position#{$bprule}-static   { position: static !important; }
+                .position#{$bprule}-relative { position: relative !important; }
+                .position#{$bprule}-absolute { position: absolute !important; }
+            }
+            @if $enable-utility-position-fixed {
+                .position#{$bprule}-fixed    { position: fixed !important; }
+            }
+            @if $enable-utility-position-sticky {
+                @supports (position: sticky) {
+                    .position#{$bprule}-sticky   { position: sticky !important; }
+                }
             }
         }
     }
-}
 
-// Quick use
-@if $enable-utility-position-fixed and $enable-utility-position-fixed-top {
-    .fixed-top {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: $zindex-fixed;
-    }
-}
-@if $enable-utility-position-fixed and $enable-utility-position-fixed-bottom {
-    .fixed-bottom {
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: $zindex-fixed;
-    }
-}
-
-@if $enable-utility-position-sticky and $enable-utility-position-sticky-top {
-    @supports (position: sticky) {
-        .sticky-top {
-            position: sticky;
+    // Quick use
+    @if $enable-utility-position-fixed and $enable-utility-position-fixed-top {
+        .fixed-top {
+            position: fixed;
             top: 0;
-            z-index: $zindex-sticky;
+            right: 0;
+            left: 0;
+            z-index: $zindex-fixed;
+        }
+    }
+    @if $enable-utility-position-fixed and $enable-utility-position-fixed-bottom {
+        .fixed-bottom {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: $zindex-fixed;
+        }
+    }
+
+    @if $enable-utility-position-sticky and $enable-utility-position-sticky-top {
+        @supports (position: sticky) {
+            .sticky-top {
+                position: sticky;
+                top: 0;
+                z-index: $zindex-sticky;
+            }
         }
     }
 }
