--- a/scss/utilities/_valign.scss
+++ b/scss/utilities/_valign.scss
@@ -1,6 +1,6 @@
 // stylelint-disable declaration-no-important
 
-@if $enable-utility-utility-valign {
+@if $enable-utility-valign {
     @each $breakpoint in $utility-valign-breakpoints {
         $bprule: breakpoint-designator($breakpoint);
 
