--- a/scss/utilities/_background.scss
+++ b/scss/utilities/_background.scss
@@ -1,31 +1,32 @@
 // stylelint-disable declaration-no-important
 
-// Contextual backgrounds
-@if $enable-utility-bg-colors {
-    @if (type-of($utility-bg-colors) == "map" and length($utility-bg-colors) != 0) {
-        @each $theme, $color in $utility-bg-colors {
-            @include bg-variant(".bg-#{$theme}", $color, $level-delta-hover-bg);
+@if $enable-utility-bg {
+    // Contextual backgrounds
+    @if $enable-utility-bg-colors {
+        @if (type-of($utility-bg-colors) == "map" and length($utility-bg-colors) != 0) {
+            @each $theme, $color in $utility-bg-colors {
+                @include bg-variant(".bg-#{$theme}", $color, $level-delta-hover-bg);
+            }
         }
     }
-}
 
-// Palette colors
-@if $enable-palette and $enable-utility-bg-palette {
-    $palette-colors-bg: $palette-colors !default;
-    $palette-levels-bg: $palette-levels !default;
+    // Palette colors
+    @if $enable-palette and $enable-utility-bg-palette {
+        $palette-colors-bg: $palette-colors !default;
+        $palette-levels-bg: $palette-levels !default;
 
-    @each $theme, $color in $palette-colors-bg {
-        @each $level in $palette-levels-bg {
-            @include bg-palette-variant(".bg-#{$theme}-#{$level}", $color, $level, $level-delta-hover-bg);
+        @each $theme, $color in $palette-colors-bg {
+            @each $level in $palette-levels-bg {
+                @include bg-palette-variant(".bg-#{$theme}-#{$level}", $color, $level, $level-delta-hover-bg);
+            }
         }
     }
-}
 
-// Special background colors
-@if $enable-utility-bg-special {
-    .bg-body { background-color: $body-bg !important; }
-    .bg-white { background-color: $white !important; }
-    .bg-black { background-color: $black !important; }
-    .bg-transparent { background-color: transparent !important; }
+    // Special background colors
+    @if $enable-utility-bg-special {
+        .bg-body { background-color: $body-bg !important; }
+        .bg-white { background-color: $white !important; }
+        .bg-black { background-color: $black !important; }
+        .bg-transparent { background-color: transparent !important; }
+    }
 }
-
